--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="Grey">#7D8183</color>
     <color name="DarkGrey">#383838</color>
     <color name="White">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
