--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#1ABC9C</color>
     <color name="colorPrimaryDark">#1ABC9C</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#008b6e</color>
     <color name="Grey">#7D8183</color>
     <color name="DarkGrey">#383838</color>
     <color name="White">#FFFFFF</color>
